force-app/main/default/objects/Competitor__c/fields/Company_Value__c.field-meta.xml
<CustomField>
    <fullName>Company_Value__c</fullName>
    <inlineHelpText>Value of company. Example: $8.2 billion @ $3.63 (Feb 2009)</inlineHelpText>
    <label>Company Value</label>
    <length>60</length>
    <type>Text</type>
</CustomField>