force-app/main/default/objects/Competitor__c/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <inlineHelpText>Number of employees.</inlineHelpText>
    <label>Employees</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-100</fullName>
            </value>
            <value>
                <fullName>101-500</fullName>
            </value>
            <value>
                <fullName>501-1000</fullName>
            </value>
            <value>
                <fullName>1001-2000</fullName>
            </value>
            <value>
                <fullName>2001-5000</fullName>
            </value>
            <value>
                <fullName>5001-10000</fullName>
            </value>
            <value>
                <fullName>&gt;10000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>