force-app/main/default/objects/Competitor__c/fields/Financial_Year_1__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year_1__c</fullName>
    <label>Financial Year 1</label>
    <type>Date</type>
</CustomField>