force-app/main/default/objects/Competitor__c/fields/Financial_Year_2__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year_2__c</fullName>
    <label>Financial Year 2</label>
    <type>Date</type>
</CustomField>