force-app/main/default/objects/Competitor__c/fields/Headquarters__c.field-meta.xml
<CustomField>
    <fullName>Headquarters__c</fullName>
    <inlineHelpText>Address of Headquarters</inlineHelpText>
    <label>Headquarters</label>
    <type>TextArea</type>
</CustomField>