force-app/main/default/objects/Competitor__c/fields/History__c.field-meta.xml
<CustomField>
    <fullName>History__c</fullName>
    <inlineHelpText>Milestones of company</inlineHelpText>
    <label>History</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>