force-app/main/default/objects/Competitor__c/fields/Income_USD_1__c.field-meta.xml
<CustomField>
    <fullName>Income_USD_1__c</fullName>
    <description>Income in year of &quot;Financial Year 1&quot;</description>
    <inlineHelpText>Income in year of &quot;Financial Year 1&quot;</inlineHelpText>
    <label>Income USD 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>