force-app/main/default/objects/Competitor__c/fields/Key_Customers__c.field-meta.xml
<CustomField>
    <fullName>Key_Customers__c</fullName>
    <inlineHelpText>Key customers in positioning and wireless.</inlineHelpText>
    <label>Key Customers</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>