force-app/main/default/objects/Competitor__c/fields/Link_TWiki__c.field-meta.xml
<CustomField>
    <fullName>Link_TWiki__c</fullName>
    <inlineHelpText>Link to detailed information in TWiki (dataheets, financial reports, benchmarking data, consolidations)</inlineHelpText>
    <label>Link TWiki</label>
    <type>Url</type>
</CustomField>