force-app/main/default/objects/Competitor__c/fields/Locations__c.field-meta.xml
<CustomField>
    <fullName>Locations__c</fullName>
    <inlineHelpText>Sites of company. Typically R&amp;D and admin.</inlineHelpText>
    <label>Locations</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>