force-app/main/default/objects/Competitor__c/fields/Market_focus__c.field-meta.xml
<CustomField>
    <fullName>Market_focus__c</fullName>
    <inlineHelpText>Focus in terms of products, market segments, regions.</inlineHelpText>
    <label>Market focus</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>