force-app/main/default/objects/Competitor__c/fields/Market_Information_Rich__c.field-meta.xml
<CustomField>
    <fullName>Market_Information_Rich__c</fullName>
    <inlineHelpText>Text field to test the rich text functionality</inlineHelpText>
    <label>Market Information Rich</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>