force-app/main/default/objects/Competitor__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <inlineHelpText>Who owns the company? If public, mention ticker.</inlineHelpText>
    <label>Ownership</label>
    <length>60</length>
    <type>Text</type>
</CustomField>