force-app/main/default/objects/Competitor__c/fields/Product_Offering__c.field-meta.xml
<CustomField>
    <fullName>Product_Offering__c</fullName>
    <description>Product offering information of the competitor</description>
    <inlineHelpText>Product offering information of the competitor</inlineHelpText>
    <label>Product Offering</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CEL chips</fullName>
            </value>
            <value>
                <fullName>CEL modules</fullName>
            </value>
            <value>
                <fullName>POS chips</fullName>
            </value>
            <value>
                <fullName>POS modules</fullName>
            </value>
            <value>
                <fullName>SHO chips</fullName>
            </value>
            <value>
                <fullName>SHO modules</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>