force-app/main/default/objects/Competitor__c/fields/Revenues_USD_2__c.field-meta.xml
<CustomField>
    <fullName>Revenues_USD_2__c</fullName>
    <description>Revenues of the year indicated in Financial Year 2, in USD</description>
    <inlineHelpText>Revenues of the year indicated in Financial Year 2, in USD</inlineHelpText>
    <label>Revenues USD 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>