force-app/main/default/objects/Competitor__c/fields/Sales_channels__c.field-meta.xml
<CustomField>
    <fullName>Sales_channels__c</fullName>
    <inlineHelpText>How and where are the GPS and wireless products sold?</inlineHelpText>
    <label>Sales channels</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>