force-app/main/default/objects/Competitor__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <inlineHelpText>Strengths in GPS and wireless</inlineHelpText>
    <label>Strengths</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>