force-app/main/default/objects/Competitor__c/fields/Suppliers_Partners__c.field-meta.xml
<CustomField>
    <fullName>Suppliers_Partners__c</fullName>
    <inlineHelpText>Suppliers of of key components.</inlineHelpText>
    <label>Suppliers &amp; Partners</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>