force-app/main/default/objects/Competitor__c/fields/Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Weaknesses__c</fullName>
    <inlineHelpText>Weaknesses in GPS and Wireless</inlineHelpText>
    <label>Weaknesses</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>