force-app/main/default/objects/Competitor__c/listViews/All_Competitors.listView-meta.xml
<ListView>
    <fullName>All_Competitors</fullName>
    <columns>NAME</columns>
    <columns>Headquarters__c</columns>
    <columns>Website__c</columns>
    <columns>Product_Offering__c</columns>
    <columns>Ownership__c</columns>
    <columns>Employees__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Competitors</label>
</ListView>