force-app/main/default/objects/Competitor__c/listViews/POS_SPG.listView-meta.xml
<ListView>
    <fullName>POS_SPG</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Link_TWiki__c</columns>
    <columns>Product_Offering__c</columns>
    <columns>Website__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Offering__c</field>
        <operation>includes</operation>
        <value>POS modules</value>
    </filters>
    <filters>
        <field>Product_Offering__c</field>
        <operation>includes</operation>
        <value>POS chips</value>
    </filters>
    <label>POS Chips+Modules</label>
</ListView>