force-app/main/default/objects/Competitor__c/listViews/SHO_Competitors.listView-meta.xml
<ListView>
    <fullName>SHO_Competitors</fullName>
    <columns>NAME</columns>
    <columns>Headquarters__c</columns>
    <columns>Website__c</columns>
    <columns>Product_Offering__c</columns>
    <columns>Ownership__c</columns>
    <columns>Employees__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Offering__c</field>
        <operation>includes</operation>
        <value>SHO modules,SHO chips</value>
    </filters>
    <label>SHO Competitors</label>
</ListView>